# CircuitPython_TimeTools

./: LICENSE  README.rst  README.rst.license  pyproject.toml  requirements.txt  timetools.py
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst  index.rst.license
examples/: timetools_set_rtc.py  timetools_simpletest.py
timetools/: __init__.py  comparisons.py
