# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2024 Thomas Dye
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-timetools"
description = "A CircuitPython library of tools to work with time"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Thomas Dye", email = "tompdye@googlemail.com"}
]
urls = {Homepage = "https://github.com/ThomasPDye/CircuitPython_TimeTools"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "timetools",
    "time",
    "ntp",
    "rtc",
    "dst",
    "bst",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["timetools"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
